authentication for user page
create admin and guide page
with verify user

--- a/src/Client/css/main.css
+++ b/src/Client/css/main.css
@@ -404,6 +404,7 @@ textarea.input100 {
 }
 
 .wrap-contact100-form-btn {
+    zIndex:0;
     width: 100%;
     display: block;
     position: relative;
