--- a/src/Client/css/table.css
+++ b/src/Client/css/table.css
@@ -161,8 +161,8 @@ iframe {
     justify-content: center;
     align-items: center;
     padding: 15px;
-    background-image: url("../images/background/musicBackground.jpg"); /* The image used */
-    background-color: #878183; /* Used if the image is unavailable */
+    /*background-image: url("../images/background/musicBackground.jpg"); !* The image used *!*/
+    /*background-color: #878183; !* Used if the image is unavailable *!*/
     /*height: 500px;  You must set a specified height */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
