--- a/src/Client/css/main.css
+++ b/src/Client/css/main.css
@@ -445,7 +445,7 @@ textarea.input100 {
 }
 
 .wrap-contact100-form-btn {
-  zindex: 0;
+  z-index: 0;
   width: 100%;
   display: block;
   position: relative;
