View users in table

--- a/src/Client/css/main.css
+++ b/src/Client/css/main.css
@@ -946,6 +946,10 @@ textarea.input100 {
   text-align: left !important;
 }
 
+.grid-col-center {
+  text-align: center !important;
+}
+
 .song-grid-container {
   display: grid;
   gap: 10px;
