--- a/src/Client/css/main.css
+++ b/src/Client/css/main.css
@@ -994,6 +994,37 @@ textarea.input100 {
   color: darkgreen;
 }
 
+.edit-research-btn-label{
+  font-family: Poppins-Regular;
+  font-size: 13px;
+  color: #666666;
+  line-height: 1.5;
+  padding-left: 5px;
+  margin-top: -11px;
+}
+
+.edit-research-btn{
+  display: inline-block;
+    white-space: nowrap;
+    background-color: #f5f5f5;
+    /* background-image: linear-gradient(top, #eee, #ccc); */
+    /* filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#eeeeee', EndColorStr='#cccccc'); */
+    border: 1px solid #777;
+    padding: 0 1.5em;
+    margin: 0.5em;
+    font: bold 1em/2em Arial, Helvetica;
+    text-decoration: none;
+    color: #333;
+    text-shadow: 0 1px 0 rgba(255,255,255,.8);
+    border-radius: .2em;
+    box-shadow: 0 0 1px 1px rgba(255,255,255,.8) inset, 0 1px 0 rgba(0,0,0,.3);
+}
+
+.edit-research-btn:hover{
+  background-color: #ebebeb;
+
+}
+
 .item1 {
   text-align: left;
   margin-left: 3em;
